[package]
name = "graphqlserver"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = {version = "5.0.10"}
async-graphql-actix-web = "5.0.10"
actix-web = {version= "4.3.1"}
actix-rt = {version ="2.8.0"}
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true