[package]
name = "graphqlserver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.97"
serde_derive = "1.0.164"
juniper = "0.15.11"
ntex = { version = "0.7.2", features = ["tokio"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true